# overclock

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  demoscene-preview.html  index.html  package-lock.json  package.json
.planning/tmp/: docs-work-manifest.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: commands.rs  detector.rs  lib.rs  main.rs  optimizer.rs  profiles.rs  snapshot.rs  types.rs
src/components/: ApplyProgress.tsx  ChangePreview.tsx  DetectScreen.tsx  HardwareCard.tsx  ProfileSelector.tsx  ResultsSummary.tsx  RevertPanel.tsx  StepProgress.tsx  StepTransition.tsx  TitleBar.tsx
src/hooks/: useHardware.ts  useProfiles.ts  useSnapshot.ts
src/styles/: animations.css  variables.css
src/types/: index.ts
