[package]
name = "overclock-app"
version = "0.1.0"
description = "Windows Performance Optimizer — auto-detect, optimize, revert."
authors = ["sweek"]
edition = "2021"

[lib]
name = "overclock_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wmi = "0.14"
windows-registry = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
